Test Page done except match

--- a/templates/display.html
+++ b/templates/display.html
@@ -7,11 +7,9 @@
 {% block body %}
 
 <div class ="userdata">
-    <h1>Answer</h1>
+    <h1>Result</h1>
     {% for r in response %}
-        <p>Question: {{r[1]}}</p>
-        <p>Student Answer: {{r[0]}}</p>
-        <p>Mark Obtained: {{r[3]}}</p>
+        <p>Score: {{r[0]}} / {{r[1]}}</p>
     {% endfor %}
 </div>
 {% endblock %}
