--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,10 @@
 <head>
 <title>Sign In</title>
 <meta charset = "utf-8">
-
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="static/css/style.css" />
 </head>
 <body>	
 <div class="home">
@@ -34,5 +37,7 @@
 		</form>
 	</div>
 </div>
+<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="static/js/login.js"></script>
 </body>
 </html>
