--- a/templates/teacher_dash.html
+++ b/templates/teacher_dash.html
@@ -57,14 +57,11 @@
 							<!--a href="#"><i class="fas fa-exclamation-circle"></i><span></span></a-->
 						</div>
 					</li>
-					<li class="item" id="settings">
-						<a href="#settings" class="menu-btn">
-							<i class="fas fa-cog"></i><span>Settings <i class="fas fa-chevron-down drop-down"></i></span>
+					<li class="item" id="createtest">
+						<a href="/createtest" class="menu-btn">
+							<i class="fas fa-cog"></i><span>Create Test <i class="fas fa-chevron"></i></span>
 						</a>
-						<div class="sub-menu">
-							<a href="#"><i class="fas fa-lock"></i><span>Password</span></a>
-							<a href="#"><i class="fas fa-language"></i><span>Language</span></a>
-						</div>
+						
 					</li>
 					<li class="item">
 						<a href="#" class="menu-btn">
