--- a/templates/teacher_dash.html
+++ b/templates/teacher_dash.html
@@ -3,6 +3,47 @@
 	<head>
 		<meta charset="utf-8">
 		<title>TEACHERS CORNER</title>
+		<style>
+			.button {
+				display: inline-block;
+				border-radius: 4px;
+				background-color: #e96f4a;
+				color: #050000;
+				text-align: center;
+				border: #050000;
+				font-size: 14px;
+				padding: 5px;
+				width: 100px;
+				transition: all 0.5s;
+				cursor: pointer;
+				margin: 5px;
+			}
+			
+			.button span {
+				cursor: pointer;
+				display: inline-block;
+				position: relative;
+				transition: 0.5s;
+			}
+			
+			.button span:after {
+				content: '\00bb';
+				position: absolute;
+				opacity: 0;
+				top: 0;
+				right: -10px;
+				transition: 0.5s;
+			}
+			
+			.button:hover span {
+				padding-right: 12px;
+			}
+			
+			.button:hover span:after {
+				opacity: 1;
+				right: 0;
+			}
+		</style>
 		<link rel="stylesheet" href="../static/css/style1.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="utf-8"></script>
@@ -75,16 +116,21 @@
 				{% set len = info[0] | length %}
 				{% for i in range(1,len) %}
 				<div class="card">
-					<p>{{info[0][i].test_name}}
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						<button style="float:right" name="delete" value="{{info[0][i].test_id}}" type="submit">Delete</button>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						<button style="float:right" name="view" value="{{info[0][i].question_list}}" type="submit">View</button>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						</p>
+					<div>
+						{{info[0][i].test_name}}
+					</div>
+					
+						
+					<div style="float: right;">
+						<button  name="delete" value="{{info[0][i].test_id}}" type="submit" class="button"><i class="fas fa-trash-alt"></i></button>
+					</div>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<div style="float: right;">
+						<button  name="view" value="{{info[0][i].question_list}}" type="submit" class="button"><span>View</span></button>
+					</div>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				
 
 				</div>
 				{% endfor %}
