--- a/templates/teacher_dash.html
+++ b/templates/teacher_dash.html
@@ -7,8 +7,8 @@
 			.button {
 				display: inline-block;
 				border-radius: 4px;
-				background-color: #e96f4a;
-				color: #050000;
+				background-color: #22242a;
+				color: #ffffff;
 				text-align: center;
 				border: #050000;
 				font-size: 14px;
@@ -126,7 +126,7 @@
 					</div>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					<div style="float: right;">
-						<button  name="view" value="{{info[0][i].question_list}}" type="submit" class="button"><span>View</span></button>
+						<button  name="view" value="{{info[0][i].test_id}}" type="submit" class="button"><span>View</span></button>
 					</div>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
