--- a/templates/student_dash.html
+++ b/templates/student_dash.html
@@ -78,15 +78,26 @@
 			<div style="background-image: url('../static/img/input-bg-05.jpg');"> 
 			<div class="main-container">
 				
+				<p id="errorMessage" class="error">{{error}}</p>
+			<form action="{{ url_for('viewtest') }}" method="POST">
+				<input type="hidden" id="testdata" name="testdata" value = "{{info[0][1:]}}">
+				{% set len = info[0] | length %}
+				{% for i in range(1,len) %}
 				<div class="card">
-					<p><a href="#"><i class="fas fa-info-circle"></i><span>TEST 1</span></a></p>
+					<p>{{info[0][i].test_name}}
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						<button style="float:right" name="view" value="{{info[0][i].test_id}}" type="submit">Take test</button>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						</p>
+
 				</div>
-				<div class="card">
-					<p><a href="#"><i class="fas fa-info-circle"></i><span>TEST 2</span></a></p>
-				</div>
-				<div class="card">
-					<p><a href="#"><i class="fas fa-info-circle"></i><span>TEST 3</span></a></p>
-				</div>
+				{% endfor %}
+			</form>
 			</div>
 			<!--main container end-->
 		</div>
