IResults Page - Initial implementation

--- a/templates/teacher_dash.html
+++ b/templates/teacher_dash.html
@@ -126,6 +126,10 @@
 					</div>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					<div style="float: right;">
+						<button  name="results" value="{{info[0][i].test_id}}" type="submit" class="button"><span>Results</span></button>
+					</div>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<div style="float: right;">
 						<button  name="view" value="{{info[0][i].test_id}}" type="submit" class="button"><span>View</span></button>
 					</div>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
