--- a/templates/student_dash_results.html
+++ b/templates/student_dash_results.html
@@ -34,7 +34,7 @@
 						<p>{{username}}</p>
 					</center>
 					<li class="item">
-						<a href="#" class="menu-btn">
+						<a href="/dashboard" class="menu-btn">
 							<i class="fas fa-desktop"></i><span>TESTS</span>
 						</a>
 					</li>
@@ -79,7 +79,7 @@
 			<div class="main-container">
 				
 				<p id="errorMessage" class="error">{{error}}</p>
-			<form action="{{ url_for('viewtest') }}" method="POST">
+			<form action="{{ url_for('view_answers') }}" method="POST">
 				<input type="hidden" id="testdata" name="testdata" value = "{{info[0][1:]}}">
 				{% set len = info[0] | length %}
 				{% for i in range(1,len) %}
@@ -90,7 +90,7 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						<button style="float:right" name="view" value="{{info[0][i].test_id}}" type="submit">Take test</button>
+						<button style="float:right" name="results" value="{{info[0][i].test_id}}" type="submit">View</button>
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						</p>
