--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,8 @@ body{
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(banner.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(/static/img/input-bg-05.jpg);
+    background-size: cover;
     height: 100vh;
     overflow: hidden;
 }
@@ -15,18 +16,36 @@ body{
 }
 .formbox{
    width: 400px; 
-   height: 900px;
+   height: 450px;
    position: relative;
    margin: 6% auto;
    background: #fff;
    padding: 5px;
    border-radius: 10px;
 }
+.formbox1{
+    width: 400px; 
+    height: 600px;
+    position: relative;
+    margin: 6% auto;
+    background: #fff;
+    padding: 5px;
+    border-radius: 10px;
+ }
 .formbox form{
     padding: 0 40px;
     box-sizing: border-box;
 }
 .formbox h1{
+    text-align: center;
+    padding: 0 0 20px 0;
+    border-bottom: 1px solid silver;
+}
+.formbox1 form{
+    padding: 0 30px;
+    box-sizing: border-box;
+}
+.formbox1 h1{
     text-align: center;
     padding: 0 0 20px 0;
     border-bottom: 1px solid silver;
@@ -87,12 +106,19 @@ body{
     border-bottom: 2px solid #adadad;
     margin: 5px 0;
 }
-.formbox input{
-    width: 100%;
+.formbox input:not([type=radio]){
     padding: 0 5px;
     height: 40px;
     font-size: 16px;
-    border: none;
+    width: 300px;
+    background: none;
+    outline: none;
+}
+.formbox1 input:not([type=radio]){
+    padding: 0 5px;
+    height: 40px;
+    font-size: 16px;
+    width: 300px;
     background: none;
     outline: none;
 }
@@ -149,4 +175,11 @@ body{
     font-size: 16px;
     position: relative;
     border-radius: 10%;
+}
+
+#testname{
+    width:200px;
+}
+#name{
+    width:100px;
 }
