--- a/templates/createtest.html
+++ b/templates/createtest.html
@@ -2,7 +2,8 @@
 <head>
 <title>Create Test</title>
 <meta charset = "utf-8">
-
+<link rel="stylesheet" href="../static/css/style1.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
 </head>
 <body>	
 <div class="home">
@@ -16,6 +17,20 @@
 						<br>
 						<input id="testname" type="text" name="testname">			
 					</label><br><br>
+					<label>Enter Date of Test(DD:MM:YYYY)
+						<br>
+						<input id="date" type="text" name="date">			
+					</label><br><br>
+					<label>Enter Start Time (specify time in HH:MM format(24 hour))
+						<br>
+						<input id="start" type="text" name="start">			
+					</label><br><br>
+					<label>Enter End Time (specify time in HH:MM format(24 hour))
+						<br>
+						<input id="end" type="text" name="end">			
+					</label><br><br>
+
+
 					<label> No of Questions 
 						<br>
 						<input id="name" type="number" name="qno">			
@@ -29,7 +44,10 @@
 				{% endif %}
 				{% if qno is defined %}
 				<input type="hidden" id="qno" name="qno" value = "{{qno}}">
-				<input type="hidden" id="name" name="name" value = "{{testname}}">
+				<input type="hidden" id="tname" name="tname" value = "{{testname}}">
+				<input type="hidden" id="st" name="st" value = "{{s}}">
+				<input type="hidden" id="dt" name="dt" value = "{{d}}">
+				<input type="hidden" id="et" name="et" value = "{{e}}">
 					{% set no = qno | int %}
 					{% set type = ['MCQ' , 'Fill in blanks','Match the following','Descriptive'] %}
 					{% for i in range(0,no) %}
@@ -44,6 +62,7 @@
 					</select>
 					<br><br>
 					{% endfor %}
+					
 					<button type="submit" name = 'createtest2' value="createtest2" class="btn">Create Test</button>
 				{% endif %}  
 				 
