--- a/templates/student_dash.html
+++ b/templates/student_dash.html
@@ -19,8 +19,6 @@
 						<i class="fas fa-bars"></i>
 					</div>
 					<ul>
-						<li><!--a href="#"><i class="fas fa-search"></i></a></li-->
-						<li><a href="#"><i class="fas fa-bell"></i></a></li>
 						<li><a href="/login"><i class="fas fa-power-off"></i></a></li>
 					</ul>
 				</div>
@@ -31,44 +29,17 @@
 				<div class="sidebar-menu">
 					<center class="profile">
 						<img src="../static/img/input-bg-03.jpg" alt="">
-						<p>{{username}}</p>
+						<p>{{info[0][0]}}</p>
 					</center>
 					<li class="item">
-						<a href="#" class="menu-btn">
+						<a href="/dashboard" class="menu-btn">
 							<i class="fas fa-desktop"></i><span>TESTS</span>
 						</a>
 					</li>
-					<li class="item" id="profile">
-						<a href="#profile" class="menu-btn">
-							<i class="fas fa-user-circle"></i><span>Profile <i class="fas fa-chevron-down drop-down"></i></span>
-						</a>
-						<div class="sub-menu">
-							<a href="#"><i class="fas fa-image"></i><span>Picture</span></a>
-							<a href="#"><i class="fas fa-address-card"></i><span>Details</span></a>
-						</div>
-					</li>
+
 					<li class="item" id="messages">
-						<a href="#messages" class="menu-btn">
-							<i class="fas fa-envelope"></i><span>Results <i class="fas fa-chevron-down drop-down"></i></span>
-						</a>
-						<div class="sub-menu">
-							<a href="/results"><i class="fas fa-envelope"></i><span>Marks Obtained</span></a>
-							<a href="#"><i class="fas fa-envelope-square"></i><span>Class Rank</span></a>
-							<!--a href="#"><i class="fas fa-exclamation-circle"></i><span></span></a-->
-						</div>
-					</li>
-					<li class="item" id="settings">
-						<a href="#settings" class="menu-btn">
-							<i class="fas fa-cog"></i><span>Settings <i class="fas fa-chevron-down drop-down"></i></span>
-						</a>
-						<div class="sub-menu">
-							<a href="#"><i class="fas fa-lock"></i><span>Password</span></a>
-							<a href="#"><i class="fas fa-language"></i><span>Language</span></a>
-						</div>
-					</li>
-					<li class="item">
-						<a href="#" class="menu-btn">
-							<i class="fas fa-info-circle"></i><span>About</span>
+						<a href="/results" class="menu-btn">
+							<i class="fas fa-envelope"></i><span>Results</span>
 						</a>
 					</li>
 				</div>
